--- a/JAIST2024.html
+++ b/JAIST2024.html
@@ -125,7 +125,7 @@
             <div class="container" >
                 <div class="main-nav">
                     <div class="logo">
-                        <h2>Toey</h2>
+                        <h2><a href="index.html" style="color: rgb(255, 255, 255);">< homepage</a></h2>
                     </div>
                     <div class="social-media">
                         <ul>
@@ -153,6 +153,15 @@
         <div class="mySlides">
             <img src="assets/images/jaist2024/jaist2024_1.jpg" alt="1">
         </div>
+        <div class="mySlides">
+            <img src="assets/images/jaist2024/jaist2024_2.jpg" alt="2">
+        </div>
+        <div class="mySlides">
+            <img src="assets/images/jaist2024/jaist2024_3.jpg" alt="3">
+        </div>
+        <div class="mySlides">
+            <img src="assets/images/jaist2024/jaist2024_4.jfif" alt="4">
+        </div>
   
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -163,10 +172,10 @@
     <!-- The dots/circles -->
     <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
-        <!-- <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span> -->
+        <!-- <span class="dot" onclick="currentSlide(5)"></span> -->
     </div>
 
     <script src="assets/js/jquery-3.2.1.min.js"></script>
