--- a/index.html
+++ b/index.html
@@ -122,10 +122,7 @@
                                 <div class="content">
                                     <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                                         <li class="nav-item">
-                                            <a class="nav-link active" id="public-template" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="true">Publication</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="research-template" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Research</a>
+                                            <a class="nav-link active" id="research-template" data-toggle="tab" href="#research" role="tab" aria-controls="research" aria-selected="true">Research</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="job-template" data-toggle="tab" href="#job" role="tab" aria-controls="job" aria-selected="true">Job</a>
@@ -136,11 +133,14 @@
                                         <li class="nav-item">
                                             <a class="nav-link" id="project-template" data-toggle="tab" href="#project" role="tab" aria-controls="project" aria-selected="true">Project</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="public-template" data-toggle="tab" href="#public" role="tab" aria-controls="public" aria-selected="true">Publication</a>
+                                        </li>
                                     </ul>
 
                                     <div class="tab-content" id="myTabContent">
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade show active" id="public" role="tabpanel" aria-labelledby="public-template">
+                                        <div class="tab-pane fade" id="public" role="tabpanel" aria-labelledby="public-template">
                                             <!-- <div class="content-list"> -->
                                                 <ol>
                                                     <li style="color: white;">
@@ -153,7 +153,7 @@
                                             <!-- </div> -->
                                         </div>
                                         <!-- ------------***----------- -->
-                                        <div class="tab-pane fade " id="research" role="tabpanel" aria-labelledby="research-template">
+                                        <div class="tab-pane fade show active" id="research" role="tabpanel" aria-labelledby="research-template">
                                             <div class="content-list">
                                                 <ol>
                                                     <li>
