--- a/APAM2022.html
+++ b/APAM2022.html
@@ -125,7 +125,7 @@
             <div class="container" >
                 <div class="main-nav">
                     <div class="logo">
-                        <h2>Toey</h2>
+                        <h2><a href="index.html" style="color: rgb(255, 255, 255);">< homepage</a></h2>
                     </div>
                     <div class="social-media">
                         <ul>
