--- a/index.html
+++ b/index.html
@@ -66,7 +66,21 @@
                             </div>
                             <div class="social-media">
                                 <ul>
-                                    <li><a href="https://linkedin.com/in/phaphontee-yamchote"><i class="flaticon-linkedin"></i></a></li>
+                                    <li>
+                                        <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            LinkedIn
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="TutorContact.html" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            Tutor Page
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://github.com/yamchote-ppt" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            GitHub
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                             <div onclick="show_menu()" class="my-toogle" style="position: fixed;">
