--- a/TutorContact.html
+++ b/TutorContact.html
@@ -9,12 +9,12 @@
         content="เรียน Discrete Mathematics, Data Structures, Algorithms หรือ Python–Java–C กับ ปพนธีร์ แย้มโชติ (เต้ย) ติวเตอร์มหาวิทยาลัยมากประสบการณ์ 10 ปี – สอนตัวต่อตัวและออนไลน์ ในหลักสูตรไทยและอินเตอร์" />
   <meta name="keywords"
         content="ติวเตอร์ Discrete Math, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
-  <link rel="canonical" href="https://yamchote-ppt.github.io/tutor.html" />
+  <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
 
   <!-- Open Graph -->
   <meta property="og:type"        content="website" />
   <meta property="og:locale"      content="th_TH" />
-  <meta property="og:url"         content="https://yamchote-ppt.github.io/tutor.html" />
+  <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
   <meta property="og:title"       content="ติวเตอร์ Discrete Math & Algorithms | ปพนธีร์ แย้มโชติ" />
   <meta property="og:description" content="สอนดีสครีต, ดาต้าสตรัคเจอร์, อัลกอริทึม, Python, Java, C – ตัวต่อตัว & ออนไลน์" />
   <meta property="og:image"       content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
@@ -35,7 +35,7 @@
     "description": "University-level tutor specialising in Discrete Mathematics, Algorithms, Data Structures and Programming (Python, Java, C).",
     "image": "https://yamchote-ppt.github.io/assets/images/profile.jpg",
     "jobTitle": "Tutor",
-    "url": "https://yamchote-ppt.github.io/tutor.html",
+    "url": "https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html",
     "sameAs": [
       "https://github.com/yamchote-ppt",
       "https://linkedin.com/in/phaphontee-yamchote"
