--- a/TutorContact.html
+++ b/TutorContact.html
@@ -163,6 +163,14 @@
         </div>
     </section>
 
+    <section id="contact" style="background-color: #181818; color: #fff; padding: 2.5rem 0;">
+        <div class="container">
+            <h2 style="color: #ff5252; margin-bottom: 1.2rem;">ติดต่อสอบถาม</h2>
+            <p style="margin-bottom: 1.5rem;">หากคุณสนใจเรียนกับผม สามารถติดต่อได้ที่:</p>
+            <ul style="list-style-type: none; padding-left: 0;">
+                <li><b>โทรศัพท์:</b> 0870492475</li>
+                <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
+
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
