--- a/TutorContact.html
+++ b/TutorContact.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>ปพนธีร์ แย้มโชติ | ติวเตอร์ Discrete Math – Algorithms – Programming (Python | Java | C) ในกรุงเทพฯ</title>
+  <title>ปพนธีร์ แย้มโชติ | ติวเตอร์ Discrete - ติวเตอร์ Discrete Math – Algorithms – Programming (Python | Java | C) ในกรุงเทพฯ</title>
   <meta name="description"
         content="เรียน Discrete Mathematics, Data Structures, Algorithms หรือ Python–Java–C กับ ปพนธีร์ แย้มโชติ (เต้ย) ติวเตอร์มหาวิทยาลัยมากประสบการณ์ 10 ปี – สอนตัวต่อตัวและออนไลน์ ในหลักสูตรไทยและอินเตอร์" />
   <meta name="keywords"
-        content="ติวเตอร์ Discrete Math, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
+        content="ติวเตอร์ Discrete, ติวเตอร์ Discrete Math, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
   <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
 
   <!-- Open Graph -->
@@ -32,7 +32,7 @@
     "@type": "Person",
     "name": "Phaphontee Yamchote",
     "alternateName": "เต้ย",
-    "description": "University-level tutor specialising in Discrete Mathematics, Algorithms, Data Structures and Programming (Python, Java, C).",
+    "description": "University-level tutor specialising in Discrete Mathematics, Algorithms, Data Structures and Programming (Python, Java, C). ติวเตอร์ discrete, ติวเตอร์ discrete math, ติวเตอร์ algorithms, ติวเตอร์ data structures, ติวเตอร์ programming, ติวเตอร์ python, ติวเตอร์ java, ติวเตอร์ c language",
     "image": "https://yamchote-ppt.github.io/assets/images/profile.jpg",
     "jobTitle": "Tutor",
     "url": "https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html",
@@ -170,7 +170,11 @@
             <ul style="list-style-type: none; padding-left: 0;">
                 <li><b>โทรศัพท์:</b> 0870492475</li>
                 <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
-
+    <!-- <iframe
+    src="https://script.google.com/macros/s/AKfycbylgez77rSlR3NCZtt1edMJMWHysvFGDf8O4njEg2KlT1TP_oY54GmuSqSjZyp4Tn59zw/exec"
+    style="width:100%; height:800px; border:none;"
+    title="Meeting Reservation Form"
+    ></iframe> -->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
