--- a/index.html
+++ b/index.html
@@ -362,6 +362,48 @@
                                             <li>
                                                 <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
                                                     <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
+                                                    Lecturer in Computer Science and Engineering
+                                                </h4>
+                                                <div class="exp-detail" style="display:none;">
+                                                    <h6>Faculty of Business Administration, Southeast Asia University</h6>
+                                                    <span>June 2025 - Present</span>
+                                                    <p>
+                                                        • Teach Computer Science and Engineering courses including Discrete Mathematics, Data Structures and Algorithms, and Programming Language for IT programs<br>
+                                                    </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                    <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
+                                                    Data Science and Analytics Mentor
+                                                </h4>
+                                                <div class="exp-detail" style="display:none;">
+                                                    <h6>We-Stride Institute of Technology</h6>
+                                                    <span>Oct 2024 - Present</span>
+                                                    <p>
+                                                        • Give consult to student in Bootcamp program, Master’s Degree in Computer science program (Woolf and SAU)<br>
+                                                        • Teach mathematics and Python for data science
+                                                    </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                    <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
+                                                    Data and AI Engineer
+                                                </h4>
+                                                <div class="exp-detail" style="display:none;">
+                                                    <h6>Fusion Solution, co. Ltd.</h6>
+                                                    <span>Sep 2024 - May 2025</span>
+                                                    <p>
+                                                        • Data engineering for on-cloud Microsoft Fabric using PySpark.<br>
+                                                        • Designed and developed end-to-end machine learning models for predictive retail data analysis.<br>
+                                                        • Conducted training sessions on machine learning development using Azure ML Studio for clients.
+                                                    </p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <h4 class="exp-toggle" style="cursor:pointer; display:flex; align-items:center; gap:8px;">
+                                                    <span class="exp-arrow" style="font-size:1.1em; transition:transform 0.2s; color:#fff;">&#9654;</span>
                                                     Intern Researcher
                                                 </h4>
                                                 <div class="exp-detail" style="display:none;">
