--- a/TutorContact.html
+++ b/TutorContact.html
@@ -65,11 +65,11 @@
                 <i onclick="hide_menu()" class="flaticon-cancel"></i>
             </span>
             <ul>
-                <li><a onclick="hide_menu()" href="#home">Home</a></li>
-                <li><a onclick="hide_menu()" href="#about">ABOUT ME</a></li>
-                <li><a onclick="hide_menu()" href="#resume">Resume</a></li>
-                <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
-                <li><a onclick="hide_menu()" href="#contact">Contact</a></li>
+                <li><a onclick="hide_menu()" href="index.html">Home</a></li>
+                <li><a onclick="hide_menu()" href="index.html#about">ABOUT ME</a></li>
+                <li><a onclick="hide_menu()" href="index.html#resume">Resume</a></li>
+                <li><a onclick="hide_menu()" href="index.html#portfolio">Projects</a></li>
+                <li><a onclick="hide_menu()" href="index.html#contact">Contact</a></li>
             </ul>
         </div>
     </div>
