--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <li><a onclick="hide_menu()" href="#portfolio">Projects</a></li>
                     <!-- <li><a onclick="hide_menu()" href="#textimonial">Reviews</a></li> -->
                     <li><a onclick="hide_menu()" href="#contact">Contact</a></li>
+                    <li><a onclick="hide_menu()" href="TutorContact.html">Tutor</a></li>
                 </ul>
             </div>
         </div>
