--- a/TutorContact.html
+++ b/TutorContact.html
@@ -70,6 +70,7 @@
                 <li><a onclick="hide_menu()" href="index.html#resume">Resume</a></li>
                 <li><a onclick="hide_menu()" href="index.html#portfolio">Projects</a></li>
                 <li><a onclick="hide_menu()" href="index.html#contact">Contact</a></li>
+                <li><a onclick="hide_menu()" href="TutorContact.html">Tutor</a></li>
             </ul>
         </div>
     </div>
