--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Phaphontee Yamchote | Machine Learning Researcher | Data Scientist | Lecturer in Computer Science and Mathematics</title>
         <link rel="canonical" href="https://yamchote-ppt.github.io/" />
 
-        <meta property="og:title" content="Phaphontee Yamchote | Machine Learning Researcher" />
+        <meta property="og:title" content="Phaphontee Yamchote" />
         <meta property="og:description" content="Explore Phaphontee's portfolio, research in graph neural networks, and data engineering experience." />
         <meta property="og:image" content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
         <meta property="og:url" content="https://yamchote-ppt.github.io/" />
