--- a/TutorContact.html
+++ b/TutorContact.html
@@ -8,15 +8,17 @@
   <meta name="description"
         content="เรียน Discrete Mathematics, Data Structures, Algorithms หรือ Python–Java–C กับ ปพนธีร์ แย้มโชติ (เต้ย) ติวเตอร์มหาวิทยาลัยมากประสบการณ์ 10 ปี – สอนตัวต่อตัวและออนไลน์ ในหลักสูตรไทยและอินเตอร์" />
   <meta name="keywords"
-        content="ติวเตอร์ Discrete, ติวเตอร์ Discrete Math, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
+        content="ติวเตอร์ Discrete Math, ติวเตอร์ Discrete, ติวเตอร์ Algorithms, ติวเตอร์ Data Structures, Tutor Python, Tutor Java, Tutor C, Phaphontee Yamchote, เต้ย, Tutor Bangkok" />
   <link rel="canonical" href="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
 
   <!-- Open Graph -->
-  <meta property="og:type"        content="website" />
+  <meta property="og:type"        content="profile" />
   <meta property="og:locale"      content="th_TH" />
   <meta property="og:url"         content="https://yamchote-ppt.github.io/phaphontee-yamchote/TutorContact.html" />
-  <meta property="og:title"       content="ติวเตอร์ Discrete Math & Algorithms | ปพนธีร์ แย้มโชติ" />
-  <meta property="og:description" content="สอนดีสครีต, ดาต้าสตรัคเจอร์, อัลกอริทึม, Python, Java, C – ตัวต่อตัว & ออนไลน์" />
+  <meta property="og:title"       content="ปพนธีร์ แย้มโชติ - ติวเตอร์ Discrete Math & Algorithms" />
+  <meta property="og:description" content="ปพนธีร์ แย้มโชติ (Phaphontee Yamchote) - เต้ย
+                                            ติวเตอร์มหาวิทยาลัย – ผู้เชี่ยวชาญ Discrete Mathematics, Data Structures, Algorithms และ Programming ด้วย Python, Java, และ C
+                                            หากคุณกำลังมองหา ติวเตอร์ Discrete Math ที่เข้าใจทั้งทฤษฎีและการประยุกต์จริง หรือกำลังเตรียมสอบวิชาคอมพิวเตอร์ เช่น Algorithms,…">
   <meta property="og:image"       content="https://yamchote-ppt.github.io/assets/images/profile.jpg" />
 
   <!-- Twitter Card -->
@@ -82,10 +84,24 @@
                         <h2><a href="index.html" style="color: rgb(255, 255, 255);">< homepage</a></h2>
                     </div>
                     <div class="social-media">
-                        <ul>
-                            <li><a href="https://linkedin.com/in/phaphontee-yamchote"><i class="flaticon-linkedin"></i></a></li>
-                        </ul>
-                    </div>
+                                <ul>
+                                    <li>
+                                        <a href="https://linkedin.com/in/phaphontee-yamchote" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            LinkedIn
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="TutorContact.html" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            Tutor Page
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://github.com/yamchote-ppt" class="btn btn-danger" style="color: #fff; font-weight: bold; padding: 6px 16px; border-radius: 5px; text-transform: uppercase; letter-spacing: 1px; font-size: 1em;">
+                                            GitHub
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                     <div onclick="show_menu()" class="my-toogle" style="position: fixed;">
                         <span><i class="flaticon-menu"></i></span>
                     </div>
@@ -160,6 +176,86 @@
                     <span style="background: #333; color: #ffd700; border-radius: 1rem; padding: 0.5rem 1.2rem; font-size: 1rem; margin-bottom: 0.3rem;">ติวเตอร์ ม.ปลาย เตรียมสอบวิศวะ</span>
                     <span style="background: #333; color: #ffd700; border-radius: 1rem; padding: 0.5rem 1.2rem; font-size: 1rem; margin-bottom: 0.3rem;">ติวเตอร์ AI / Machine Learning / Data Science</span>
                 </div>
+                <div class="container">
+                    <h2 style="color: #ff5252; margin-bottom: 1.2rem;">รายวิชาที่เคยสอน</h2>
+                    <p style="margin-bottom: 1.5rem;">ตัวอย่างรายวิชาที่ผมเคยสอนให้กับนักศึกษามหาวิทยาลัยทั้งในไทยและต่างประเทศ</p>
+                    <div id="university-toggle-list">
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                Mahidol University
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <ul style="line-height:2;">
+                                    <li><b>Discrete Mathematics</b></li>
+                                    <li><b>Algorithms</b></li>
+                                    <li><b>Data Structures</b></li>
+                                    <li><b>Programming (Python, Java, C)</b></li>
+                                    <li><b>Artificial Intelligence & Machine Learning</b></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                Chulalongkorn University
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <ul style="line-height:2;">
+                                    <li><b>Discrete Mathematics</b></li>
+                                    <li><b>Algorithms</b></li>
+                                    <li><b>Data Structures</b></li>
+                                    <li><b>Mathematics (Calculus, Linear Algebra, Probability, Statistics)</b></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                KMITL / ICT Mahidol / CU Engineering
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <ul style="line-height:2;">
+                                    <li><b>Discrete Mathematics</b></li>
+                                    <li><b>Algorithms</b></li>
+                                    <li><b>Data Structures</b></li>
+                                    <li><b>Programming (Python, Java, C)</b></li>
+                                    <li><b>Operating Systems, Database Systems</b></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="toggle-item">
+                            <button class="toggle-btn" type="button" style="background:#ff5252;color:#fff;border:none;font-size:1.1rem;padding:0.7rem 1.2rem;width:100%;text-align:left;border-radius:0.7rem;margin-bottom:0.5rem;display:flex;align-items:center;gap:0.7rem;">
+                                <span class="arrow" style="display:inline-block;transition:transform 0.2s;">&#9654;</span>
+                                International (Oxford, Toronto, Imperial, Stanford)
+                            </button>
+                            <div class="toggle-content" style="display:none;padding-left:1.5rem;margin-bottom:1rem;">
+                                <ul style="line-height:2;">
+                                    <li><b>Discrete Mathematics</b></li>
+                                    <li><b>Algorithms</b></li>
+                                    <li><b>Data Structures</b></li>
+                                    <li><b>Mathematics (Calculus, Linear Algebra, Probability, Statistics)</b></li>
+                                    <li><b>Artificial Intelligence & Machine Learning</b></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script>
+                    document.querySelectorAll('.toggle-btn').forEach(function(btn) {
+                        btn.addEventListener('click', function() {
+                            var content = this.nextElementSibling;
+                            var arrow = this.querySelector('.arrow');
+                            if (content.style.display === "none" || content.style.display === "") {
+                                content.style.display = "block";
+                                arrow.style.transform = "rotate(90deg)";
+                            } else {
+                                content.style.display = "none";
+                                arrow.style.transform = "rotate(0deg)";
+                            }
+                        });
+                    });
+                </script>
             </div>
         </div>
     </section>
@@ -171,11 +267,13 @@
             <ul style="list-style-type: none; padding-left: 0;">
                 <li><b>โทรศัพท์:</b> 0870492475</li>
                 <li><b>Line ID:</b> <a href="https://line.me/ti/p/QCV7ZLvnma" style="color: #4dd0e1; text-decoration: underline;">toeynanarashi</a></li>
-    <!-- <iframe
-    src="https://script.google.com/macros/s/AKfycbylgez77rSlR3NCZtt1edMJMWHysvFGDf8O4njEg2KlT1TP_oY54GmuSqSjZyp4Tn59zw/exec"
-    style="width:100%; height:800px; border:none;"
-    title="Meeting Reservation Form"
-    ></iframe> -->
+            </ul>
+        </div>
+    </section>
+
+
+
+
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
