--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="keywords" content="Phaphontee Yamchote, Machine Learning, Data Scientist, Graph Neural Networks, AI Researcher, Data Engineer, ICT Mahidol University, Python, Tutor, Mathematics, Computer Science, Discrete mathematics, Algorithms, Data Structures">
         <meta name="author" content="Phaphontee Yamchote">
-        <title>Phaphontee Yamchote | Machine Learning Researcher | Data Scientist | Lecturer in Computer Science and Mathematics</title>
+        <title>Phaphontee Yamchote | Tutor and Lecturer in Computer Science and Mathematics</title>
         <link rel="canonical" href="https://yamchote-ppt.github.io/" />
 
         <meta property="og:title" content="Phaphontee Yamchote" />
